Closes-Bug: #1608779 -- Web-UI: Need to correct look and feel for policy create popup Closes-Bug: #1557879 -- Add icons in all the places has an extra space. Closes-Bug: #1570804 -- WebUI: Seeing misalignments in Column header with Editable Grid Action View Template
1)Removed the unwanted Space Between the rows
2)Fixed the look and feel of details shown after clicking  Mirror, Services and
QoS.Also, did label changes.
3)Alignment and look and feel improvements.
4)Removed extra space after "+" icon.
5)Fixed the misalignments in column header of BGP Router.

--- a/webroot/common/ui/css/contrail.controller.css
+++ b/webroot/common/ui/css/contrail.controller.css
@@ -322,7 +322,7 @@ tr.collapsibleChildContainer> td{
 #peer_selection>table tr.data-row  td{
     padding-top:5px;}
 #peer_selection th.action-cell, #peer_selection td.action-cell{
-    text-align:right;
+    text-align:left;
     padding-right:12px;}
 #peer_selection>table table, #peer_selection>table table input{
     font-size:12px;}
@@ -449,5 +449,24 @@ td.action-cell a{color:#787878;}
 Added for severity bubble in config alarms
 */
 .circle.mini {
-	border: 1px;
+    border: 1px;
 }
+#PolicyRules>table>tbody>tr>td>div>div.select2-container, #PolicyRules>table>tbody>tr>td .select2-container-disabled a{
+    border:0px; 
+}
+#PolicyRules>table>tbody>tr>td.data-cell-mirror>div>div.select2-container, #PolicyRules>table>tbody>tr>td.data-cell-QoS>div>div.select2-container{
+    border:1px solid #dadada;
+}
+#PolicyRules>table>tbody>tr>td .select2-container-disabled{
+    border: 1px solid #f4f4f4;
+}
+#PolicyRules .custom-combobox-input+span i.icon-caret-down{
+    display:block;vertical-align:top;
+}
+#PolicyRules .custom-combobox .ui-autocomplete-input {
+    margin: 0;
+    padding: 0 19px 0 5px;
+}
+#PolicyRules td.data-cell-service_instances .form-element.span10, #PolicyRules td.data-cell-mirror .select2-container.span10, #PolicyRules td.data-cell-QoS .select2-container.span10{margin-left:3px;}
+#PolicyRules th>a.editable-grid-add-link{
+    margin-left:5px;}
